<resources>
    <string name="app_name">OurAppPsiAssist</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="insert_password">Insert Password</string>
    <string name="email">Email</string>
    <string name="maria_mail_net">maria@mail.net</string>
    <string name="insert_email_here">Insert Email Here</string>
    <string name="password">Password</string>
    <string name="PasswordPh">••••••</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account_create_one_here">No account? Create one here!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="login">Login</string>
    <string name="hintpassword">********</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="navOpen">navOpen</string>
    <string name="navClose">navClose</string>
    <string name="profile">Profile</string>
    <string name="requests">Requests</string>
    <string name="home">Home</string>
    <string name="documents">Documents</string>
    <string name="logout">Logout</string>
    <string name="description">Description:</string>
    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="search">search</string>
    <string name="created_at">Created At:</string>
    <string name="state">State:</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="delete_account">LOG OUT</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_mail_net">email@mail.net</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_key">email</string>
    <string name="email_required">Email required</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="email_extra">EMAIL</string>
    <string name="email_not_found">Email not found</string>
    <string name="well_come">Well come</string>
    <string name="create_your_request">Create Your Request</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>