<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

    <item android:id="@+id/navHome"
        android:title="@string/home"/>


    <item android:id="@+id/navRequest"
        android:title="@string/requests"
        android:icon="@drawable/ic_menu_grelha"/>

    <item android:id="@+id/navDocument"
        android:title="@string/documents" />

    <item android:id="@+id/navProfile"
        android:title="@string/profile"
        android:icon="@drawable/ic_menu_lista"/>

    <item android:id="@+id/navLogout"
            android:title="@string/logout" />


    </group>

    <!--        <item android:title="Comunicar" >-->
<!--        <menu>-->
<!--            &lt;!&ndash;<item android:id="@+id/navEmail"-->
<!--                android:title="Email"-->
<!--                android:icon="@drawable/ic_menu_email"/>&ndash;&gt;-->
<!--        </menu>-->
<!--        </item>-->
</menu>