<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginHorizontal="8dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activitys.LoginActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".01"/>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="230dp"
        android:layout_height="192dp"
        android:src="@drawable/logo">
    </ImageView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".01"/>

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".01" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/insert_email_here"
        android:textColor="#888888"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:text="@string/maria_mail_net"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/insert_password"
        android:textColor="#888888"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:text="@string/PasswordPh"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="onClickLogin"
        app:cornerRadius="12dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".01" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="onClickGoToCreateAccount"
        android:text="@string/no_account_create_one_here"
        android:textColor="#777777"
        android:textSize="12sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".01" />

</LinearLayout>