<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

        <!-- User Name / Image -->

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_action_car"
            android:contentDescription="@string/app_name"
            android:padding="10dp" />

<!--        TODO: make user name be the conection of frist and last-->
       <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".02"/>

        <!-- First Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:text="@string/first_name"/>
        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:paddingTop="4dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".01"/>

        <!-- Last Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:text="@string/last_name"/>
        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:paddingTop="4dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".01"/>

        <!-- Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:text="@string/email"/>
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:paddingTop="4dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".01"/>

        <!-- Phone Number -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:text="@string/phone_number"/>
        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:paddingTop="4dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".02"/>

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_marginTop="24dp"
            android:onClick="onClickEditProfile"/>

        <Button
            android:id="@+id/btnDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:backgroundTint="#C62828"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:onClick="onClickDeleteAccount"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"/>
    </LinearLayout>
