<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PasswordResetActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:layout_margin="30dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

        <TextView
            android:id="@+id/tvResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:textStyle="bold" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"/>


        <TextView
            android:id="@+id/tvNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hintpassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".01"/>

        <TextView
            android:id="@+id/tvConfirmNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_new_password" />

        <EditText
            android:id="@+id/etConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hintpassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".01"/>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:backgroundTint="@color/black"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"/>


    </LinearLayout>


</LinearLayout>