<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activitys.EditProfileActivity">


        <!-- User Name / Image -->

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".55"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/user_name"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!-- First Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:text="@string/first_name"/>

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/first_name" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".05"/>

        <!-- Last Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:text="@string/last_name"/>

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/last_name" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".05"/>

        <!-- Email -->

    <!-- Phone Number -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:text="@string/phone_number"/>

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/phone_number"
            tools:ignore="TextFields" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="24dp"
            android:onClick="onClickSave"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".55"/>

</LinearLayout>
