<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.RequestActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.5" />

    <!-- Titulo -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_your_request"
        android:textSize="28sp"
        android:textAlignment="center"
        android:layout_marginBottom="24dp"
        android:textColor="?android:attr/textColorPrimary" />

    <!-- Input para o Título -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input para a Descrição -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAttachFiles"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:text="Anexar Ficheiros"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.5" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/dark_blue"
        app:tint="@color/white"
        android:focusable="true"
        android:src="@drawable/ic_action_add" />

</LinearLayout>